# tidylinreg

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci-cd.yml  repo-status.yml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
src/tidylinreg/: tidylinreg.py
tests/: test_get_ci.py  test_get_std_error.py  test_summary.py  test_tidylinreg.py
